# SLURPP_Flow

./: .gitignore  README.md  pyproject.toml
scripts/: download_models.py
scripts/inference/: infer_real.sh  infer_video.sh
slurpp/: infer_video.py
